add maxDepth in binaryTree

--- a/shujujiegou/run.html
+++ b/shujujiegou/run.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button id="btn">点击</button>
+    <!-- <button id="btn">点击</button> -->
     <script src="./BinaryTree.js">
     </script>
     <script>
@@ -31,8 +31,10 @@
         binaryTree.qianxu(qianxuCallback)
         console.log(`qianxuArr => ${qianxuArr}`);
         console.log(`qianxuII =>${binaryTree.qianxuII()}`);
+
+        console.log(`maxDepth =>${binaryTree.maxDepth()}`);
     </script>
-    <script>
+    <!-- <script>
         let btn = document.getElementById('btn')
         console.log(btn);
         btn.addEventListener('click',abc)
@@ -41,7 +43,7 @@
                 console.log(666);
             }
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
