add max && maxDepthII (bfs) to binaryTree

--- a/shujujiegou/run.html
+++ b/shujujiegou/run.html
@@ -33,6 +33,8 @@
         console.log(`qianxuII =>${binaryTree.qianxuII()}`);
 
         console.log(`maxDepth =>${binaryTree.maxDepth()}`);
+        console.log(`minNode =>${binaryTree.min()}\nmaxNode => ${binaryTree.max()}`);
+        console.log(`maxDepthII =>${binaryTree.maxDepthII()}`);
     </script>
     <!-- <script>
         let btn = document.getElementById('btn')
