add sumNumber(dfs) to binaryTree

--- a/shujujiegou/run.html
+++ b/shujujiegou/run.html
@@ -35,6 +35,8 @@
         console.log(`maxDepth =>${binaryTree.maxDepth()}`);
         console.log(`minNode =>${binaryTree.min()}\nmaxNode => ${binaryTree.max()}`);
         console.log(`maxDepthII =>${binaryTree.maxDepthII()}`);
+        console.log(`isSymmetric =>${binaryTree.isSymmetric()}`);
+        console.log(`sumNumbers =>${binaryTree.sumNumbers()}`);
     </script>
     <!-- <script>
         let btn = document.getElementById('btn')
