--- a/webpack/index.html
+++ b/webpack/index.html
@@ -23,4 +23,5 @@
     // console.log(add(1,2))
 
 </script>
-<script src="./dist/bundle.js"></script>
+<!-- <script src="./dist/bundle.js"></script> -->
+<script src="./bishi.js"></script>
