--- a/webpack/bishi.html
+++ b/webpack/bishi.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script>
+    <!-- <script>
         var a, b = null
         console.log(a,typeof a);
         console.log(b,typeof b);
@@ -36,16 +36,40 @@
     </script>
     <script>
         console.log(['1','2','3'].map(parseInt));
-        let sum1 = "11" + 1
-        let sum2 = sum1 - '1'
+        
 //         等同于：['1','2','3'].map((item,index)=>parseInt(item,index))  ===> parseInt('1',0) ，parseInt('2',1)，parseInt('3',2)
 // parseInt 的第二个参数 radix 为 0 时，ECMAScript5 将 string 作为十进制数字的字符串解析
 // parseInt 的第二个参数为 1 时，解析结果为 NaN
 // parseInt 的第二个参数 radix 在 2—36 之间时，如果 string 参数的第一个字符（除空白以外），不属于 radix 指定进制下的字符，解析结果为 NaN 。
 // parseInt("3", 2) 执行时，由于 "3" 不属于二进制字符，解析结果为 NaN。
-
+        let sum1 = "11" + 1
+        let sum2 = sum1 - '1'
         console.log(sum1,sum2);
-    </script>
+    </script> -->
+    <!-- <script>
+        function judge(s, t) {
+            let tempArr = s.split('')
+            let arr = t.split('')
+            let markIndex = -1
+            while (tempArr.length) {
+                const symb = tempArr.pop()
+                console.log("len =>", tempArr.length, symb);
+                for (let i = arr.length - 1; i >= 0; i--) {
+                    console.log(i);
+                    if (symb == arr[i]) {
+                        if (markIndex == -1 || markIndex > i)
+                            markIndex = i
+                        console.log("mark", markIndex);
+                        break
+                    } else if (i == -1) {
+                        return false
+                    }
+                }
+            }
+            return markIndex !== -1 ? true : false
+        }
+        console.log(judge('abc', 'ahbgdc'));
+    </script> -->
 </body>
 
 </html>
