--- a/bishi/testcode.html
+++ b/bishi/testcode.html
@@ -1,2 +1,4 @@
 <!-- <script src="./baichenyuan.js"></script> -->
-<script src="./geli.js"></script>
+<!-- <script src="./geli.js"></script> -->
+<script src="./promise.js"></script>
+<script src="./promise2.js"></script>
