添加scss、router、字体；添加修改build打包配置修改应用图标、标题

--- a/electron/model_vue3_vite_ts/demo/index.html
+++ b/electron/model_vue3_vite_ts/demo/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="./src/render/assets/style/globle_style.css" />
+    <!-- <link rel="stylesheet" href="./src/render/assets/style/font_icon/font_2871608_5vf31iyg26w/iconfont.css" /> -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_2871608_3vug2hp40li.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 </head>
